apps/base/joplin/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  labels:
    app.kubernetes.io/instance: joplin-server
    app.kubernetes.io/name: joplin-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: joplin-server
      app.kubernetes.io/instance: joplin-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joplin-server
        app.kubernetes.io/instance: joplin-server
    spec:
      nodeSelector:
        nodeclass: general
      containers:
        - name: joplin-server
          image: "joplin/server:2.14.2-beta"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 22300
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
