apps/base/joplin/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-server
  labels:
    app.kubernetes.io/instance: joplin-server
    app.kubernetes.io/name: joplin-server
spec:
  type: ClusterIP
  ports:
  - port: 22300
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: joplin-server
    app.kubernetes.io/instance: joplin-server
