apps/base/joplin/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "401,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505" # removed 401,403
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/authz/auth-request'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.christensencloud.us?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/proxy-body-size: 64m # raised because some joplin uploads got 413 errors. Probably because of screenshot images.
  name: joplin
spec:
  ingressClassName: nginx
  rules:
    - host: joplin.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: joplin-server
                port:
                  number: 22300
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - joplin.christensencloud.us
      secretName: joplin-christensencloud.us-tls
